[gd_scene load_steps=2 format=3 uid="uid://bttwm03lsy35k"]

[ext_resource type="Script" uid="uid://bdvrh1b4x32rm" path="res://scenes/snake_attack_5/snake_attack_5.gd" id="1_vavc5"]

[node name="SnakeAttack5" type="Node2D"]
script = ExtResource("1_vavc5")

[node name="CooldownTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
